# budget-app

./: .gitignore  Caddyfile  NOTES.md  README.md  bill-history-template.csv  budget.db  budget.db-shm  budget.db-wal  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts
.github/workflows/: ci.yml  deploy-home.yml  release-desktop.yml
app/: globals.css  layout.tsx  page.tsx
app/bills/: page.tsx
app/budget/: page.tsx
app/calendar/: page.tsx
app/cash/: page.tsx
app/credit-cards/: page.tsx
app/login/: page.tsx
app/settings/: page.tsx
app/setup/: page.tsx
app/trends/: page.tsx
components/: Nav.tsx
db/migrations/: 001_init.sql  002_phase1_cash_buckets.sql  003_accounts_last_four.sql  004_phase2_trends_credit_card_ledger.sql  005_phase3_monthly_budgets.sql  006_phase4_monthly_closes.sql
deploy/: README.md
deploy/caddy/: budget-app.Caddyfile
deploy/systemd/: budget-app.service
lib/: auth.ts  basepath.ts  bills.ts  config.ts  data.ts  db.ts
planning/: README.md  phase-1-cash-buckets-foundation.md  phase-2-trends-and-spending-visibility.md  phase-3-budget-vs-actual.md  phase-4-calendar-transfers-and-monthly-close.md  phase-5-plaid-ready-data-foundation.md  phase-6-plaid-integration-and-reconciliation.md  tauri-first-rewrite-plan.md
scripts/: db-migrate.mjs  import-bill-history.js  import-sqlite-to-postgres.mjs  prepare-tauri-dist.mjs  run-next-dev.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
tmp/: import-source.db  import-source.db-journal
(+37 files in other folders)
