[package]
name = "budget_app"
version = "1.0.0"
description = "Budget App desktop shell"
authors = ["Budget App contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "budget_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
aes-gcm = "0.10"
bcrypt = "0.17"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-openssl", "vendored"] }
pbkdf2 = { version = "0.12", features = ["sha2"] }
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.10.3", features = [] }
log = "0.4"
tauri-plugin-log = "2"
